# cognitive-state-diary-generator

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/commands/: finish-task.md  implement.md  review-changes.md  start-task.md
.steering/: _verify-report-20260409.md
.steering/20260325-actor/: design.md  requirement.md  tasklist.md
.steering/20260325-advice-improvements/: design.md  requirement.md  tasklist.md
.steering/20260325-anthropic-migration/: requirement.md  tasklist.md
.steering/20260325-config/: requirement.md
.steering/20260325-critic/: design.md  requirement.md  tasklist.md
.steering/20260325-llm-client/: design.md  requirement.md  tasklist.md
.steering/20260325-main-viz/: requirement.md  tasklist.md
.steering/20260325-mvp-final-verification/: requirement.md  tasklist.md
.steering/20260325-pipeline/: design.md  requirement.md  tasklist.md
csdg/: __init__.py  config.py  main.py  scenario.py  schemas.py  visualization.py
csdg/engine/: __init__.py  actor.py  (+8 more)
docs/: architecture.md  development-guidelines.md  erre-design.md  functional-design.md  glossary.md  mvp-implementation-workflow.md  repository-structure.md  technical-report.md
prompts/: Prompt_Critic.md  Prompt_Generator.md  Prompt_MemoryExtract.md  Prompt_StateUpdate.md  System_Persona.md
scripts/: quality_report.py
tests/: conftest.py  test_actor.py  test_config.py  test_critic.py  test_critic_log.py  test_llm_client.py  test_main.py  test_memory.py  test_pipeline.py  test_scenario.py  test_schemas.py  test_state_transition.py  test_visualization.py
(+52 files in other folders)
